--- a/api/Funda.Tasks.Api/Funda.Tasks.Api/Funda.Tasks.Api.csproj
+++ b/api/Funda.Tasks.Api/Funda.Tasks.Api/Funda.Tasks.Api.csproj
@@ -1,10 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.7" />
+    <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Funda.Tasks.Infrastructure.TableStorage\Funda.Tasks.Infrastructure.TableStorage.csproj" />
+    <ProjectReference Include="..\Funda.Tasks.Logic\Funda.Tasks.Logic.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
