--- a/api/Funda.Tasks.Api/Funda.Tasks.Api/Funda.Tasks.Api.csproj
+++ b/api/Funda.Tasks.Api/Funda.Tasks.Api/Funda.Tasks.Api.csproj
@@ -2,12 +2,18 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
+    <UserSecretsId>1188eb1f-a62e-4142-bd5f-41ba9b2381c2</UserSecretsId>
+	<_FunctionsSkipCleanOutput>true</_FunctionsSkipCleanOutput>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AzureFunctions.OidcAuthentication" Version="1.0.4" />
+    <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.15.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.10" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Funda.Tasks.Logic\Funda.Tasks.Logic\Funda.Tasks.Logic.csproj" />
     <ProjectReference Include="..\Funda.Tasks.Infrastructure.TableStorage\Funda.Tasks.Infrastructure.TableStorage.csproj" />
   </ItemGroup>
   <ItemGroup>
