--- a/api/Funda.Tasks.Api/Funda.Tasks.Api.csproj
+++ b/api/Funda.Tasks.Api/Funda.Tasks.Api.csproj
@@ -13,8 +13,8 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Funda.Tasks.Logic\Funda.Tasks.Logic\Funda.Tasks.Logic.csproj" />
     <ProjectReference Include="..\Funda.Tasks.Infrastructure.TableStorage\Funda.Tasks.Infrastructure.TableStorage.csproj" />
+    <ProjectReference Include="..\Funda.Tasks.Logic\Funda.Tasks.Logic.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
