--- a/api/Funda.Tasks.Logic/Funda.Tasks.Logic.csproj
+++ b/api/Funda.Tasks.Logic/Funda.Tasks.Logic.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.12" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Funda.Tasks.Core\Funda.Tasks.Core.csproj" />
   </ItemGroup>
 
